* Updated installer to optionally create a backup of the settings when upgrading
* Changed to a more convenient observer implementation (no, not a functor (or something more fancy) based one)
* Fixed an invalid XML file list crash
* Copy address to clipboard from public hub list (thanks joakim tosteberg)
* Changed to IEC binary multiple units (MiB, KiB etc)
* GETSETREF templetized (thanks farcry)


 -- 0.401 2004-03-28 --
* Fixed the dupe file issue
* Hopefully fixed the dupe op issue
* Rephrased remove dupes option (thanks garg)

 -- 0.400 2004-03-27 --
* Fixed escape in user commands (thanks garg)
* Probably fixed search frame hang
* Exact size in queue frame (thanks cologic)
* Ip in search frame (thanks cologic)
* Small fix to transfer view sorting (thanks torgny nyblom)
* User commands in transfer view (thanks torgny nyblom)
* Extra logging in main status bar (thanks garg)
* Option not to bold queue tab (thanks garg)
* Option not to send unknown /-commands (thanks garg)
* Hopefully fixed some encoding issues with the xml filelist
* Hashing is now mandatory (stop whining, it was only meant to be optional in 0.307)
* Match files now works correctly with TTH's in queue
* Hub name more or less correct on TTH results in search frame
* Added search by TTH to queue frame
* Large speed improvement in user list loading when lists sorted on user name
* Fixed inverted ratio of uploads
* New icons in window menu (thanks garg)
* SFV failure message (thanks garg)
* Bolds for defaults in some menus (thanks garg)
* Fixed random filelist crash
* Performance improvement in background match queue
* Dupe file check done by TTH value

 -- 0.307 2004-03-10 --
* Experimental release, lots and lots of core code has changed => high fatal bug probability.
* Fixed full name being displayed in user commands with submenus
* Bloom filters dramatically improve cpu efficiency on incoming searches (if you have a large share)
* Auto match results shown in status bar